tests/neg/i12348.check
-- [E040] Syntax Error: tests/neg/i12348.scala:2:15 --------------------------------------------------------------------
2 |  given inline x: Int = 0 // error
  |               ^
  |               'with' expected, but identifier found
